--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body { background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e); color: white; min-height: 100vh; }
-    .card { background: rgba(30,30,60,0.8); border: 1px solid #6366f1; border-radius: 1rem; overflow: hidden; transition: all 0.3s; }
-    .card:hover { transform: translateY(-4px); box-shadow: 0 10px 30px rgba(99,102,241,0.25); }
+    .card { background: rgba(30,30,60,0.8); border: 1px solid #6366f1; border-radius: 1rem; }
     .mic-btn { background: #ef4444; color: white; padding: 1rem 2rem; border-radius: 9999px; }
     .upload-area { border: 3px dashed #6366f1; border-radius: 1rem; padding: 3rem; text-align: center; cursor: pointer; }
-    .upload-area:hover { background: rgba(99,102,241,0.1); }
     .gallery { display: grid; grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)); gap: 1.5rem; }
   </style>
 </head>
@@ -29,10 +27,9 @@
       <div id="authStatus" class="text-sm"></div>
     </header>
 
-    <!-- TAB 0: Home -->
+    <!-- TAB 0: Home (clean - no speak button) -->
     <div id="page0">
       <div class="flex justify-center gap-8 mb-12">
-        <button onclick="speakCommand()" class="mic-btn">🎤 Speak Command</button>
         <label class="upload-area">
           📤 Upload Photo or Video (max 50MB)
           <input id="fileInput" type="file" accept="image/*,video/*" class="hidden" onchange="handleUpload(event)" />
@@ -40,21 +37,28 @@
       </div>
     </div>
 
-    <!-- TAB 1: Gallery (now with Rename & Delete) -->
+    <!-- TAB 1: Gallery -->
     <div id="page1" class="hidden">
       <h2 class="text-3xl font-bold mb-8">Gallery</h2>
       <div id="gallery" class="gallery"></div>
     </div>
 
-    <!-- TAB 2: Studio -->
+    <!-- TAB 2: Studio (Speak Command moved here + auto-fills AI box) -->
     <div id="page2" class="hidden">
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+
+        <!-- AI Code Generator -->
         <div class="card p-8">
           <h2 class="text-2xl font-bold mb-6">AI Code Generator</h2>
+          <div class="flex justify-center mb-6">
+            <button onclick="speakCommand()" class="mic-btn">🎤 Speak Command (fills below)</button>
+          </div>
           <textarea id="aiRequest" class="w-full h-40 bg-gray-900 p-4 rounded-xl font-mono text-sm" placeholder="Describe what you want..."></textarea>
           <button onclick="generateAICode()" class="mt-4 w-full py-4 bg-gradient-to-r from-blue-600 to-cyan-600 rounded-xl font-bold">Generate Code with Grok</button>
           <p id="aiStatus" class="mt-4 text-center text-green-400"></p>
         </div>
+
+        <!-- Primordia Studio -->
         <div class="card p-8">
           <h2 class="text-2xl font-bold mb-6">Primordia Studio</h2>
           <textarea id="primordiaCode" class="w-full h-40 bg-gray-900 p-4 rounded-xl font-mono text-sm" placeholder="Write PRIMORDIA glyphs here..."></textarea>
@@ -82,7 +86,7 @@
     function renderGallery() {
       const g = document.getElementById('gallery');
       g.innerHTML = '';
-      mediaItems.forEach((item, index) => {
+      mediaItems.forEach(item => {
         const div = document.createElement('div');
         div.className = 'card';
         if (item.type.startsWith('image')) {
@@ -90,35 +94,12 @@
         } else {
           div.innerHTML = `<video src="${item.url}" controls class="w-full h-64 object-cover"></video>`;
         }
-        const controls = document.createElement('div');
-        controls.className = 'p-4 flex justify-between items-center';
-        controls.innerHTML = `
-          <span class="font-medium">${item.name}</span>
-          <div>
-            <button onclick="renameItem(${index})" class="text-indigo-400 hover:text-indigo-300 mr-3">✏️</button>
-            <button onclick="deleteItem(${index})" class="text-red-400 hover:text-red-300">🗑️</button>
-          </div>
-        `;
-        div.appendChild(controls);
+        const name = document.createElement('p');
+        name.className = 'p-3 text-center';
+        name.textContent = item.name;
+        div.appendChild(name);
         g.appendChild(div);
       });
-    }
-
-    function renameItem(index) {
-      const newName = prompt("New name for this item:", mediaItems[index].name);
-      if (newName && newName.trim() !== '') {
-        mediaItems[index].name = newName.trim();
-        saveData();
-        renderGallery();
-      }
-    }
-
-    function deleteItem(index) {
-      if (confirm("Delete this item permanently?")) {
-        mediaItems.splice(index, 1);
-        saveData();
-        renderGallery();
-      }
     }
 
     function handleUpload(e) {
@@ -135,7 +116,20 @@
     }
 
     function speakCommand() {
-      alert('Speak Command activated!');
+      if (!('SpeechRecognition' in window || 'webkitSpeechRecognition' in window)) {
+        alert('Voice not supported in this browser. Use Chrome or Edge.');
+        return;
+      }
+
+      const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+      recognition.lang = 'en-US';
+      recognition.onresult = (event) => {
+        const text = event.results[0][0].transcript;
+        document.getElementById('aiRequest').value = text;
+        alert('Voice transcribed and inserted into AI Code Generator!');
+      };
+      recognition.onerror = (e) => alert('Voice error: ' + e.error);
+      recognition.start();
     }
 
     function generateAICode() {
