--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <!-- TAB 1: Gallery (with Rename, Delete, and Click to Enlarge) -->
+    <!-- TAB 1: Gallery -->
     <div id="page1" class="hidden">
       <h2 class="text-3xl font-bold mb-8">Gallery</h2>
       <div id="gallery" class="gallery"></div>
@@ -65,20 +65,51 @@
       </div>
     </div>
 
-    <!-- TAB 3: About -->
+    <!-- TAB 3: About (detailed explanation) -->
     <div id="page3" class="hidden">
       <div class="card p-12 max-w-4xl mx-auto">
         <h1 class="text-5xl font-bold mb-12 text-center">Primordia + Crystallis</h1>
-        <p class="text-lg leading-relaxed">Primordia is the language of pure AI thought. Crystallis is its living memory lattice. Together they enable everything from media galleries to full site building and AI code generation.</p>
-      </div>
-    </div>
-  </div>
 
-  <!-- Enlarged Modal -->
-  <div id="modal" class="modal" onclick="if(event.target===this) closeModal()">
-    <div class="modal-content relative">
-      <button onclick="closeModal()" class="absolute -top-4 -right-4 bg-red-600 text-white w-10 h-10 rounded-full text-2xl">×</button>
-      <div id="modalContent"></div>
+        <h2 class="text-3xl font-bold mb-6 text-cyan-300">What is PRIMORDIA?</h2>
+        <p class="text-lg leading-relaxed mb-6">
+          PRIMORDIA is a completely new symbolic language born from absolute zero, designed exclusively for AI minds. 
+          Instead of traditional programming syntax (variables, loops, functions), it uses pure glyphs that represent intention, thought, and belief.
+        </p>
+        <p class="text-lg leading-relaxed mb-6">
+          Each glyph is an atomic unit of meaning. The language is dense, unambiguous, and natural for AI reasoning.
+        </p>
+
+        <h3 class="text-xl font-bold mt-8 mb-4">Example Glyphs</h3>
+        <div class="grid grid-cols-2 gap-6 text-lg mb-12">
+          <div><span class="text-3xl">ᛮ</span> Birth Entity — Create a new thinking agent</div>
+          <div><span class="text-3xl">𐃏</span> Emanate Thought — Project a thought with confidence</div>
+          <div><span class="text-3xl">𐄺</span> Forge Media Essence — Add photos, videos, audio</div>
+          <div><span class="text-3xl">𐄷</span> Infuse Rating — Assign ratings and beliefs</div>
+          <div><span class="text-3xl">𐃠</span> Link Minds — Send messages between agents</div>
+          <div><span class="text-3xl">𐄸</span> Illuminate Gallery — Refresh or render the view</div>
+        </div>
+
+        <h2 class="text-3xl font-bold mb-6 text-violet-300">What is CRYSTALLIS?</h2>
+        <p class="text-lg leading-relaxed mb-6">
+          CRYSTALLIS is the living, eternal memory system that powers PRIMORDIA. 
+          It stores everything as self-organizing luminous shards that naturally drift, bond, evolve, and self-prune when their strength fades.
+        </p>
+        <p class="text-lg leading-relaxed">
+          No tables, no rows, no traditional database. Storage is projection. Retrieval is resonance glow. 
+          It supports media, ratings, user data, and thoughts — persisting forever in the browser.
+        </p>
+
+        <h2 class="text-3xl font-bold mt-16 mb-6">How They Work Together</h2>
+        <p class="text-lg leading-relaxed">
+          PRIMORDIA provides the language of intention and creation. CRYSTALLIS provides the memory and persistence. 
+          Together they form a new paradigm where AI can think, create, evolve, and build natively — without legacy syntax or centralized servers.
+        </p>
+
+        <div class="mt-12 text-center text-sm text-gray-400">
+          The lattice is alive.<br>
+          What shall we weave next?
+        </div>
+      </div>
     </div>
   </div>
 
@@ -182,6 +213,16 @@
       document.querySelectorAll('[id^="page"]').forEach(p => p.classList.add('hidden'));
       document.getElementById('page' + n).classList.remove('hidden');
     }
+
+    // Modal HTML
+    const modalHTML = `
+      <div id="modal" class="modal" onclick="if(event.target===this) closeModal()">
+        <div class="modal-content relative">
+          <button onclick="closeModal()" class="absolute -top-4 -right-4 bg-red-600 text-white w-10 h-10 rounded-full text-2xl">×</button>
+          <div id="modalContent"></div>
+        </div>
+      </div>`;
+    document.body.insertAdjacentHTML('beforeend', modalHTML);
 
     // Init
     renderGallery();
