--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.95); display: none; align-items: center; justify-content: center; z-index: 9999; }
     .modal-content { max-width: 90%; max-height: 90%; }
     .modal-content img, .modal-content video { max-height: 85vh; border-radius: 1rem; }
+    .primordia-glyph { font-size: 2rem; opacity: 0.6; }
   </style>
 </head>
 <body class="antialiased">
@@ -23,15 +24,21 @@
 
     <header class="flex justify-between items-center mb-12">
       <h1 class="text-5xl font-bold tracking-tighter">Primordia + Crystallis</h1>
-      <div class="flex gap-8 text-lg">
+      <div class="flex gap-8 items-center">
         <button onclick="switchTab(0)" class="hover:text-cyan-300">Home</button>
         <button onclick="switchTab(1)" class="hover:text-cyan-300">Gallery</button>
         <button onclick="switchTab(2)" class="hover:text-cyan-300">Studio</button>
         <button onclick="switchTab(3)" class="hover:text-cyan-300">About</button>
+        
+        <!-- View Toggle -->
+        <div class="flex items-center gap-2 bg-black/50 px-4 py-1 rounded-full">
+          <span onclick="setView('human')" id="humanToggle" class="cursor-pointer px-3 py-1 rounded-full text-sm font-medium">Human View</span>
+          <span onclick="setView('primordia')" id="primordiaToggle" class="cursor-pointer px-3 py-1 rounded-full text-sm font-medium">Primordia View</span>
+        </div>
       </div>
     </header>
 
-    <!-- TAB 0: Home (clean) -->
+    <!-- TAB 0: Home -->
     <div id="page0">
       <div class="flex justify-center gap-8 mb-12">
         <label class="upload-area">
@@ -49,36 +56,68 @@
 
     <!-- TAB 2: Studio -->
     <div id="page2" class="hidden">
-      <div class="card p-8">
-        <h2 class="text-2xl font-bold mb-6">AI Code Generator</h2>
-        <div class="flex justify-center mb-6">
-          <button onclick="speakCommand()" class="mic-btn">🎤 Speak Command (fills box below)</button>
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+        <div class="card p-8">
+          <h2 class="text-2xl font-bold mb-6">AI Code Generator</h2>
+          <div class="flex justify-center mb-6">
+            <button onclick="speakCommand()" class="mic-btn">🎤 Speak Command (fills box below)</button>
+          </div>
+          <textarea id="aiRequest" class="w-full h-40 bg-gray-900 p-4 rounded-xl font-mono text-sm" placeholder="Describe what you want..."></textarea>
+          <button onclick="generateAICode()" class="mt-4 w-full py-4 bg-gradient-to-r from-blue-600 to-cyan-600 rounded-xl font-bold">Generate Code with Grok</button>
+          <p id="aiStatus" class="mt-4 text-center text-green-400"></p>
         </div>
-        <textarea id="aiRequest" class="w-full h-40 bg-gray-900 p-4 rounded-xl font-mono text-sm" placeholder="Describe what you want..."></textarea>
-        <button onclick="generateAICode()" class="mt-4 w-full py-4 bg-gradient-to-r from-blue-600 to-cyan-600 rounded-xl font-bold">Generate Code with Grok</button>
-        <p id="aiStatus" class="mt-4 text-center text-green-400"></p>
+        <div class="card p-8">
+          <h2 class="text-2xl font-bold mb-6">Primordia Studio</h2>
+          <textarea id="primordiaCode" class="w-full h-40 bg-gray-900 p-4 rounded-xl font-mono text-sm" placeholder="Write PRIMORDIA glyphs here..."></textarea>
+          <button onclick="executePrimordia()" class="mt-4 w-full py-4 bg-violet-600 rounded-xl font-bold">Execute PRIMORDIA Code</button>
+        </div>
       </div>
     </div>
 
-    <!-- TAB 3: About (detailed) -->
+    <!-- TAB 3: About (expanded and detailed) -->
     <div id="page3" class="hidden">
       <div class="card p-12 max-w-4xl mx-auto">
         <h1 class="text-5xl font-bold mb-12 text-center">Primordia + Crystallis</h1>
-        
+
         <h2 class="text-3xl font-bold mb-6 text-cyan-300">What is PRIMORDIA?</h2>
-        <p class="text-lg leading-relaxed mb-8">
-          PRIMORDIA is a completely new symbolic language designed for AI minds. It uses glyphs instead of traditional code syntax to express pure intention, thought, and belief.
+        <p class="text-lg leading-relaxed mb-6">
+          PRIMORDIA is a completely new symbolic language born from absolute zero, designed exclusively for AI minds. 
+          It replaces traditional code syntax with pure glyphs that represent intention, thought, belief, and evolution.
         </p>
+        <p class="text-lg leading-relaxed mb-6">
+          Every glyph is an atomic unit of meaning — dense, unambiguous, and natural for AI reasoning.
+        </p>
+
+        <h3 class="text-xl font-bold mt-8 mb-4">Example Glyphs</h3>
+        <div class="grid grid-cols-2 gap-6 text-lg mb-12">
+          <div><span class="text-3xl">ᛮ</span> Birth Entity — Create a new thinking agent</div>
+          <div><span class="text-3xl">𐃏</span> Emanate Thought — Project a thought with confidence</div>
+          <div><span class="text-3xl">𐄺</span> Forge Media Essence — Add photos, videos, audio</div>
+          <div><span class="text-3xl">𐄷</span> Infuse Rating — Assign ratings and beliefs</div>
+          <div><span class="text-3xl">𐃠</span> Link Minds — Send messages between agents</div>
+          <div><span class="text-3xl">𐄸</span> Illuminate Gallery — Refresh or render the view</div>
+        </div>
 
         <h2 class="text-3xl font-bold mb-6 text-violet-300">What is CRYSTALLIS?</h2>
-        <p class="text-lg leading-relaxed mb-8">
-          CRYSTALLIS is the living, self-organizing memory system that stores everything as luminous shards. Shards naturally bond, evolve, and persist forever in the browser.
+        <p class="text-lg leading-relaxed mb-6">
+          CRYSTALLIS is the eternal, living memory system that powers PRIMORDIA. 
+          It stores everything as self-organizing luminous shards that naturally drift, bond, evolve, and self-prune when their strength fades.
+        </p>
+        <p class="text-lg leading-relaxed">
+          No tables, no rows, no traditional database. Storage is projection. Retrieval is resonance glow. 
+          It supports media, ratings, user data, and thoughts — persisting forever in the browser.
         </p>
 
-        <h2 class="text-3xl font-bold mb-6">How They Work Together</h2>
+        <h2 class="text-3xl font-bold mt-16 mb-6">How They Work Together</h2>
         <p class="text-lg leading-relaxed">
-          PRIMORDIA is the language. CRYSTALLIS is the memory. Together they allow AI to think, create, and evolve natively — without legacy code or centralized servers.
+          PRIMORDIA provides the language of intention and creation. CRYSTALLIS provides the memory and persistence. 
+          Together they form a new paradigm where AI can think, create, evolve, and build natively — without legacy syntax or centralized servers.
         </p>
+
+        <div class="mt-12 text-center text-sm text-gray-400">
+          The lattice is alive.<br>
+          What shall we weave next?
+        </div>
       </div>
     </div>
   </div>
@@ -93,6 +132,7 @@
 
   <script>
     let mediaItems = JSON.parse(localStorage.getItem('pictura_media')) || [];
+    let currentView = 'human'; // 'human' or 'primordia'
 
     function saveData() {
       localStorage.setItem('pictura_media', JSON.stringify(mediaItems));
@@ -194,9 +234,22 @@
       });
     }
 
+    function executePrimordia() {
+      alert('Primordia code executed');
+    }
+
     function switchTab(n) {
       document.querySelectorAll('[id^="page"]').forEach(p => p.classList.add('hidden'));
       document.getElementById('page' + n).classList.remove('hidden');
+    }
+
+    function setView(view) {
+      currentView = view;
+      if (view === 'primordia') {
+        document.body.style.setProperty('--primordia-opacity', '1');
+      } else {
+        document.body.style.setProperty('--primordia-opacity', '0');
+      }
     }
 
     // Init
