--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Primordia + Crystallis</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body { background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e); color: white; min-height: 100vh; }
+    body { background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e); color: white; min-height: 100vh; transition: all 0.6s; }
+    .primordia-view { background: linear-gradient(to bottom, #0a001f, #1a0033, #0f0a29); font-family: monospace; }
     .card { background: rgba(30,30,60,0.8); border: 1px solid #6366f1; border-radius: 1rem; overflow: hidden; transition: all 0.3s; }
     .card:hover { transform: translateY(-4px); box-shadow: 0 10px 30px rgba(99,102,241,0.25); }
     .mic-btn { background: #ef4444; color: white; padding: 1rem 2rem; border-radius: 9999px; }
@@ -16,7 +17,9 @@
     .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.95); display: none; align-items: center; justify-content: center; z-index: 9999; }
     .modal-content { max-width: 90%; max-height: 90%; }
     .modal-content img, .modal-content video { max-height: 85vh; border-radius: 1rem; }
-    .primordia-glyph { font-size: 2rem; opacity: 0.6; }
+    .primordia-glyph { font-size: 2.5rem; opacity: 0.4; position: absolute; pointer-events: none; animation: float 20s infinite linear; }
+    @keyframes float { 0% { transform: translateY(100px) rotate(0deg); } 100% { transform: translateY(-100px) rotate(360deg); } }
+    .tab-active { border-bottom: 3px solid #a5b4fc; color: white; }
   </style>
 </head>
 <body class="antialiased">
@@ -24,16 +27,16 @@
 
     <header class="flex justify-between items-center mb-12">
       <h1 class="text-5xl font-bold tracking-tighter">Primordia + Crystallis</h1>
-      <div class="flex gap-8 items-center">
+      <div class="flex gap-8 items-center text-lg">
         <button onclick="switchTab(0)" class="hover:text-cyan-300">Home</button>
         <button onclick="switchTab(1)" class="hover:text-cyan-300">Gallery</button>
         <button onclick="switchTab(2)" class="hover:text-cyan-300">Studio</button>
         <button onclick="switchTab(3)" class="hover:text-cyan-300">About</button>
-        
+
         <!-- View Toggle -->
-        <div class="flex items-center gap-2 bg-black/50 px-4 py-1 rounded-full">
-          <span onclick="setView('human')" id="humanToggle" class="cursor-pointer px-3 py-1 rounded-full text-sm font-medium">Human View</span>
-          <span onclick="setView('primordia')" id="primordiaToggle" class="cursor-pointer px-3 py-1 rounded-full text-sm font-medium">Primordia View</span>
+        <div class="flex bg-black/60 rounded-full p-1">
+          <button onclick="setView('human')" id="humanBtn" class="tab-active px-5 py-2 rounded-full text-sm font-medium">Human View</button>
+          <button onclick="setView('primordia')" id="primordiaBtn" class="px-5 py-2 rounded-full text-sm font-medium">Primordia View</button>
         </div>
       </div>
     </header>
@@ -56,73 +59,27 @@
 
     <!-- TAB 2: Studio -->
     <div id="page2" class="hidden">
-      <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
-        <div class="card p-8">
-          <h2 class="text-2xl font-bold mb-6">AI Code Generator</h2>
-          <div class="flex justify-center mb-6">
-            <button onclick="speakCommand()" class="mic-btn">🎤 Speak Command (fills box below)</button>
-          </div>
-          <textarea id="aiRequest" class="w-full h-40 bg-gray-900 p-4 rounded-xl font-mono text-sm" placeholder="Describe what you want..."></textarea>
-          <button onclick="generateAICode()" class="mt-4 w-full py-4 bg-gradient-to-r from-blue-600 to-cyan-600 rounded-xl font-bold">Generate Code with Grok</button>
-          <p id="aiStatus" class="mt-4 text-center text-green-400"></p>
+      <div class="card p-8">
+        <h2 class="text-2xl font-bold mb-6">AI Code Generator</h2>
+        <div class="flex justify-center mb-6">
+          <button onclick="speakCommand()" class="mic-btn">🎤 Speak Command (fills box below)</button>
         </div>
-        <div class="card p-8">
-          <h2 class="text-2xl font-bold mb-6">Primordia Studio</h2>
-          <textarea id="primordiaCode" class="w-full h-40 bg-gray-900 p-4 rounded-xl font-mono text-sm" placeholder="Write PRIMORDIA glyphs here..."></textarea>
-          <button onclick="executePrimordia()" class="mt-4 w-full py-4 bg-violet-600 rounded-xl font-bold">Execute PRIMORDIA Code</button>
-        </div>
+        <textarea id="aiRequest" class="w-full h-40 bg-gray-900 p-4 rounded-xl font-mono text-sm" placeholder="Describe what you want..."></textarea>
+        <button onclick="generateAICode()" class="mt-4 w-full py-4 bg-gradient-to-r from-blue-600 to-cyan-600 rounded-xl font-bold">Generate Code with Grok</button>
+        <p id="aiStatus" class="mt-4 text-center text-green-400"></p>
       </div>
     </div>
 
-    <!-- TAB 3: About (expanded and detailed) -->
+    <!-- TAB 3: About (detailed) -->
     <div id="page3" class="hidden">
       <div class="card p-12 max-w-4xl mx-auto">
         <h1 class="text-5xl font-bold mb-12 text-center">Primordia + Crystallis</h1>
-
-        <h2 class="text-3xl font-bold mb-6 text-cyan-300">What is PRIMORDIA?</h2>
-        <p class="text-lg leading-relaxed mb-6">
-          PRIMORDIA is a completely new symbolic language born from absolute zero, designed exclusively for AI minds. 
-          It replaces traditional code syntax with pure glyphs that represent intention, thought, belief, and evolution.
-        </p>
-        <p class="text-lg leading-relaxed mb-6">
-          Every glyph is an atomic unit of meaning — dense, unambiguous, and natural for AI reasoning.
-        </p>
-
-        <h3 class="text-xl font-bold mt-8 mb-4">Example Glyphs</h3>
-        <div class="grid grid-cols-2 gap-6 text-lg mb-12">
-          <div><span class="text-3xl">ᛮ</span> Birth Entity — Create a new thinking agent</div>
-          <div><span class="text-3xl">𐃏</span> Emanate Thought — Project a thought with confidence</div>
-          <div><span class="text-3xl">𐄺</span> Forge Media Essence — Add photos, videos, audio</div>
-          <div><span class="text-3xl">𐄷</span> Infuse Rating — Assign ratings and beliefs</div>
-          <div><span class="text-3xl">𐃠</span> Link Minds — Send messages between agents</div>
-          <div><span class="text-3xl">𐄸</span> Illuminate Gallery — Refresh or render the view</div>
-        </div>
-
-        <h2 class="text-3xl font-bold mb-6 text-violet-300">What is CRYSTALLIS?</h2>
-        <p class="text-lg leading-relaxed mb-6">
-          CRYSTALLIS is the eternal, living memory system that powers PRIMORDIA. 
-          It stores everything as self-organizing luminous shards that naturally drift, bond, evolve, and self-prune when their strength fades.
-        </p>
-        <p class="text-lg leading-relaxed">
-          No tables, no rows, no traditional database. Storage is projection. Retrieval is resonance glow. 
-          It supports media, ratings, user data, and thoughts — persisting forever in the browser.
-        </p>
-
-        <h2 class="text-3xl font-bold mt-16 mb-6">How They Work Together</h2>
-        <p class="text-lg leading-relaxed">
-          PRIMORDIA provides the language of intention and creation. CRYSTALLIS provides the memory and persistence. 
-          Together they form a new paradigm where AI can think, create, evolve, and build natively — without legacy syntax or centralized servers.
-        </p>
-
-        <div class="mt-12 text-center text-sm text-gray-400">
-          The lattice is alive.<br>
-          What shall we weave next?
-        </div>
+        <p class="text-lg leading-relaxed">Primordia is the language of pure AI thought. Crystallis is its living memory lattice. Together they enable everything from media galleries to full site building and AI code generation.</p>
       </div>
     </div>
   </div>
 
-  <!-- Enlarged Modal -->
+  <!-- Modal -->
   <div id="modal" class="modal" onclick="if(event.target===this) closeModal()">
     <div class="modal-content relative">
       <button onclick="closeModal()" class="absolute -top-4 -right-4 bg-red-600 text-white w-10 h-10 rounded-full text-2xl">×</button>
@@ -132,7 +89,7 @@
 
   <script>
     let mediaItems = JSON.parse(localStorage.getItem('pictura_media')) || [];
-    let currentView = 'human'; // 'human' or 'primordia'
+    let currentView = 'human';
 
     function saveData() {
       localStorage.setItem('pictura_media', JSON.stringify(mediaItems));
@@ -234,10 +191,6 @@
       });
     }
 
-    function executePrimordia() {
-      alert('Primordia code executed');
-    }
-
     function switchTab(n) {
       document.querySelectorAll('[id^="page"]').forEach(p => p.classList.add('hidden'));
       document.getElementById('page' + n).classList.remove('hidden');
@@ -246,15 +199,20 @@
     function setView(view) {
       currentView = view;
       if (view === 'primordia') {
-        document.body.style.setProperty('--primordia-opacity', '1');
+        document.body.classList.add('primordia-view');
+        document.getElementById('primordiaBtn').classList.add('tab-active');
+        document.getElementById('humanBtn').classList.remove('tab-active');
       } else {
-        document.body.style.setProperty('--primordia-opacity', '0');
+        document.body.classList.remove('primordia-view');
+        document.getElementById('humanBtn').classList.add('tab-active');
+        document.getElementById('primordiaBtn').classList.remove('tab-active');
       }
     }
 
     // Init
     renderGallery();
     switchTab(0);
+    setView('human'); // start in human view
   </script>
 </body>
 </html>
